--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1",
     "autoprefixer": "10.4.14",
-    "postcss": "8.4.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "^0.344.0",
+    "next": "^15.4.6",
+    "postcss": "8.4.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
-    "typescript": "5.3.3",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.10",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "typescript": "^5.9.2"
   }
 }
